Polish jvm-junit4.md setup guide (454→287 lines, -37%)
Removed verbose sections and HTTP client examples.

Changes:
- Removed entire "Testing HTTP Clients" section (~110 lines)
  - Link to client guides instead of duplicating examples
- Removed "JUnit 4 vs JUnit 5" comparison section (~22 lines)
  - Not needed in setup guide
- Streamlined IntelliJ IDEA configuration
- Condensed troubleshooting sections

Follows succinct, value-first style from README.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>